--- a/frontend/app/src/components/VerticalText/style.module.scss
+++ b/frontend/app/src/components/VerticalText/style.module.scss
@@ -3,7 +3,10 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 0;
-
+    margin-top: 40px;
+    @include bp-med {
+        margin-top: 0;
+    }
     &Title {
         font-size: 30px;
         line-height: 34px;
@@ -12,10 +15,10 @@
         min-height: 50px;
         margin-bottom: 10px;
 
-        margin-top: auto;
         * {
             text-align: center;
         }
+
         @include bp-full {
             min-height: 70px;
         }
